--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="google-site-verification" content="8O5PlhVUTTA83m4hl6xGvJBQQd_jXeag3ZzfTNk2Ejk" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Syed's Detailing</title>
+  <meta name="description" content="Syed's Raw Details - Professional mobile car detailing service in Hanover Park, IL. Book interior & exterior detailing now.">
+  <meta name="keywords" content="car detailing, Hanover Park detailing, mobile detailing, interior cleaning, exterior wash, Syed's Raw Details">
+  <meta name="author" content="Syed's Raw Details">
   <style>
     body {
       margin: 0;
