--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
   <div id="about" class="section">
     <h2>About Us</h2>
-    <p>Syed's Raw Details is a mobile car detailing service proudly based in Hanover Park, IL. We use high-quality products and techniques to make your ride look brand new, inside and out. We come to you — just book and we’ll handle the shine.</p>
+    <p>Syed's Detailing is a local car detailing service proudly based in Hanover Park, IL. We use high-quality products and techniques to make your ride look brand new, inside and out. Just book and we’ll handle the shine.</p>
   </div>
 
   <div id="contact" class="section">
