--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
     <p>Exterior • Interior</p>
     <img src="pricing.jpg" alt="Pricing Graphic" />
     <br />
-    <a class="book-button" href="mailto:litsydkamal@gmail.com?subject=Booking%20Request%20from%20Syed's%20Detailing&body=Hi%20Syed,%0D%0A%0D%0AI%20would%20like%20to%20book%20a%20detailing%20service.%0D%0A%0D%0AMy%20Name%3A%20%0D%0AMy%20Car%20Type%3A%20%0D%0ADate%20Requested%3A%20%0D%0AService%20Type%3A%20%0D%0ALocation%3A%20%0D%0A%0D%0AThanks!">Book Now - Email</a>
+   <a class="book-button"
+   href="https://mail.google.com/mail/?view=cm&fs=1&to=litsydkamal@gmail.com&su=Booking%20Request%20from%20Syed's%20Detailing&body=Hi%20Syed,%0A%0AI%20would%20like%20to%20book%20a%20detailing%20service.%0A%0AMy%20Name:%20%0AMy%20Car%20Type:%20%0ADate%20Requested:%20%0AService%20Type:%20%0ALocation:%20%0A%0AThanks!"
+   target="_blank">
+   Book Now - Email
+</a>
   <a class="book-button"
    href="sms:12243221625&body=Hi%20Syed%2C%20I%20would%20like%20to%20book%20a%20detailing%20service.%0AMy%20Name%3A%20%0AMy%20Car%20Type%3A%20%0ADate%20Requested%3A%20%0AService%20Type%3A%20%0ALocation%3A%20"
    onclick="if (!/Mobi|Android|iPhone/i.test(navigator.userAgent)) { alert('Please use your phone to send a text message.'); return false; }">
