--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Syed's Raw Details - Professional mobile car detailing service in Hanover Park, IL. Book interior & exterior detailing now.">
-  <meta name="keywords" content="car detailing, Hanover Park detailing, mobile detailing, interior cleaning, exterior wash, Syed's Raw Details">
-  <meta name="author" content="Syed's Raw Details">
+  <meta name="description" content="Syed's Detailing - Professional mobile car detailing service in Hanover Park, IL. Book interior & exterior detailing now.">
+  <meta name="keywords" content="car detailing, Hanover Park detailing, mobile detailing, interior cleaning, exterior wash, Syed's Detailing">
+  <meta name="author" content="Syed's Detailnig">
   <style>
     body {
       margin: 0;
