--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <p>Exterior • Interior</p>
     <img src="pricing.jpg" alt="Pricing Graphic" />
     <br />
-    <a class="book-button" href="mailto:gyrihsie@gmail.com?subject=Booking%20Request%20from%20Syed's%20Detailing&body=Hi%20Syed,%0D%0A%0D%0AI%20would%20like%20to%20book%20a%20detailing%20service.%0D%0A%0D%0AMy%20Name%3A%20%0D%0AMy%20Car%20Type%3A%20%0D%0ADate%20Requested%3A%20%0D%0AService%20Type%3A%20%0D%0ALocation%3A%20%0D%0A%0D%0AThanks!">Book Now - Email</a>
+    <a class="book-button" href="mailto:syedsdetailing@gmail.com?subject=Booking%20Request%20from%20Syed's%20Detailing&body=Hi%20Syed,%0D%0A%0D%0AI%20would%20like%20to%20book%20a%20detailing%20service.%0D%0A%0D%0AMy%20Name%3A%20%0D%0AMy%20Car%20Type%3A%20%0D%0ADate%20Requested%3A%20%0D%0AService%20Type%3A%20%0D%0ALocation%3A%20%0D%0A%0D%0AThanks!">Book Now - Email</a>
   <a class="book-button"
    href="sms:12243221625&body=Hi%20Syed%2C%20I%20would%20like%20to%20book%20a%20detailing%20service.%0AMy%20Name%3A%20%0AMy%20Car%20Type%3A%20%0ADate%20Requested%3A%20%0AService%20Type%3A%20%0ALocation%3A%20"
    onclick="if (!/Mobi|Android|iPhone/i.test(navigator.userAgent)) { alert('Please use your phone to send a text message.'); return false; }">
@@ -134,7 +134,7 @@
   <div id="contact" class="section">
     <h2>Contact</h2>
     <p><strong>Phone:</strong> (224) 322-1625</p>
-    <p><strong>Email:</strong> litsydkamal@gmail.com</p>
+    <p><strong>Email:</strong> syedsdetailing@gmail.com</p>
   </div>
 
   <footer>
